// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden palettes > black, exact 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f9f9f9",
        "#eaeaea",
        "#d8d8d8",
        "#c1c1c1",
        "#a2a2a2",
        "#7f7f7f",
        "#5f5f5f",
        "#3f3f3f",
        "#2b2b2b",
        "#1a1a1a",
        "#000000 (seed)",
      ],
      "hue": null,
      "name": "grey",
      "seed": {
        "input": "#000000",
        "magnitude": "large",
        "mode": "exact",
        "slot": 950,
      },
      "sharedLadder": false,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f9f9f9",
        "#eeeeee",
        "#dfdfdf",
        "#cccccc",
        "#b0b0b0",
        "#909090",
        "#727272",
        "#545454",
        "#424242",
        "#323232",
        "#222222",
      ],
      "hue": null,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "roleHints": [],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.27:1, Lc 0",
    "3: 1.53:1, Lc 13",
    "4: 2.06:1, Lc 26",
    "5: 3.03:1, Lc 40",
    "6: 4.57:1, Lc 57",
    "7: 7.19:1, Lc 73",
    "8: 9.55:1, Lc 84",
    "9: 12.18:1, Lc 93",
    "10: 15.11:1, Lc 99",
  ],
  "warnings": [
    "NO_HUE",
    "SEED_AT_RAMP_END",
    "SEED_WARP_STRAIN",
  ],
}
`;

exports[`golden palettes > blurple, exact 1`] = `
{
  "ramps": [
    {
      "broken": [
        "600: 4.4315 < 4.5",
      ],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f7f8fe",
        "#ebeefe",
        "#dadffe",
        "#c3cbfe",
        "#a2acff",
        "#7d82ff",
        "#635bff (seed)",
        "#4e21f2",
        "#3e14c7",
        "#2e1597",
        "#1d1065",
      ],
      "hue": 278.3,
      "name": "indigo",
      "seed": {
        "input": "#635bff",
        "magnitude": "noticeable",
        "mode": "exact",
        "slot": 600,
      },
      "sharedLadder": false,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fcf7fe",
        "#f7e9fe",
        "#f0d6fd",
        "#e7bdfc",
        "#d897f7",
        "#bd70e1",
        "#a547cc",
        "#8718af",
        "#6b148a",
        "#52116b",
        "#380b49",
      ],
      "hue": 314.3,
      "name": "fuchsia",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7fa",
        "#fee8f1",
        "#fdd4e6",
        "#fdb9d7",
        "#fc8cc3",
        "#e461a6",
        "#cc308a",
        "#9f1569",
        "#7e1252",
        "#610f3f",
        "#430a2b",
      ],
      "hue": 350.3,
      "name": "pink",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f6",
        "#fee9e7",
        "#fdd6d1",
        "#fdbcb5",
        "#fc9389",
        "#f06159",
        "#d92d2f",
        "#a7161c",
        "#841316",
        "#661011",
        "#460a0a",
      ],
      "hue": 26.3,
      "name": "red",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef8f2",
        "#feebdb",
        "#fdd8b9",
        "#fcc08b",
        "#f59b40",
        "#d07c1a",
        "#a66214",
        "#7c480e",
        "#61380c",
        "#4b2b09",
        "#331c06",
      ],
      "hue": 62.3,
      "name": "amber",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fbf9ed",
        "#f5efcb",
        "#ede0a0",
        "#dfcd6d",
        "#c8b022",
        "#a48f19",
        "#827213",
        "#61540e",
        "#4c420c",
        "#3a3209",
        "#272206",
      ],
      "hue": 98.3,
      "name": "yellow",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f4fbf0",
        "#e0f4d5",
        "#c6e9b2",
        "#a8da8a",
        "#83c05a",
        "#5ba119",
        "#478013",
        "#345f0e",
        "#284b0b",
        "#1f3909",
        "#132606",
      ],
      "hue": 134.3,
      "name": "lime",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#eefcf6",
        "#cef7e7",
        "#a3eed4",
        "#6de0bc",
        "#26c69e",
        "#1da281",
        "#168166",
        "#11604b",
        "#0e4b3b",
        "#0b3a2d",
        "#07271d",
      ],
      "hue": 170.3,
      "name": "emerald",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#edfcfe",
        "#c9f6fc",
        "#98edf8",
        "#56deee",
        "#26c1d2",
        "#1d9eac",
        "#167e89",
        "#115d66",
        "#0e4950",
        "#0b383d",
        "#072629",
      ],
      "hue": 206.3,
      "name": "cyan",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f4fafe",
        "#dff0fe",
        "#c3e3fd",
        "#9cd2fc",
        "#59b8fb",
        "#1c97e0",
        "#1578b3",
        "#105985",
        "#0d4669",
        "#0b3551",
        "#072437",
      ],
      "hue": 242.3,
      "name": "sky",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f7f8fe",
        "#ecedf8",
        "#dddfe9",
        "#cacbd6",
        "#aeafb9",
        "#8e8f99",
        "#70717b",
        "#53545c",
        "#40424a",
        "#31323a",
        "#202129",
      ],
      "hue": 278.3,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "roleHints": [
    "danger: red",
    "warning: amber",
    "success: lime",
    "info: sky",
  ],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.25:1, Lc 0",
    "3: 1.52:1, Lc 14",
    "4: 2.05:1, Lc 26",
    "5: 3.03:1, Lc 40",
    "6: 4.54:1, Lc 57",
    "7: 7.10:1, Lc 73",
    "8: 9.45:1, Lc 83",
    "9: 12.00:1, Lc 92",
    "10: 15.08:1, Lc 98",
  ],
  "warnings": [
    "GUARANTEE_NOT_MET",
  ],
}
`;

exports[`golden palettes > blurple, harmonize 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f7f8fe",
        "#eaedfe",
        "#d9defd",
        "#c2c9fc",
        "#a1aafb",
        "#7e84fa",
        "#615fec",
        "#4a31dd",
        "#3b1bbe",
        "#2d1793",
        "#1d1065",
      ],
      "hue": 278.3,
      "name": "indigo",
      "seed": {
        "input": "#635bff",
        "magnitude": "noticeable",
        "mode": "harmonize",
        "slot": 600,
      },
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fcf7fe",
        "#f7e9fe",
        "#f0d6fd",
        "#e7bdfc",
        "#d897f7",
        "#bd70e1",
        "#a547cc",
        "#8718af",
        "#6b148a",
        "#52116b",
        "#380b49",
      ],
      "hue": 314.3,
      "name": "fuchsia",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7fa",
        "#fee8f1",
        "#fdd4e6",
        "#fdb9d7",
        "#fc8cc3",
        "#e461a6",
        "#cc308a",
        "#9f1569",
        "#7e1252",
        "#610f3f",
        "#430a2b",
      ],
      "hue": 350.3,
      "name": "pink",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f6",
        "#fee9e7",
        "#fdd6d1",
        "#fdbcb5",
        "#fc9389",
        "#f06159",
        "#d92d2f",
        "#a7161c",
        "#841316",
        "#661011",
        "#460a0a",
      ],
      "hue": 26.3,
      "name": "red",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef8f2",
        "#feebdb",
        "#fdd8b9",
        "#fcc08b",
        "#f59b40",
        "#d07c1a",
        "#a66214",
        "#7c480e",
        "#61380c",
        "#4b2b09",
        "#331c06",
      ],
      "hue": 62.3,
      "name": "amber",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fbf9ed",
        "#f5efcb",
        "#ede0a0",
        "#dfcd6d",
        "#c8b022",
        "#a48f19",
        "#827213",
        "#61540e",
        "#4c420c",
        "#3a3209",
        "#272206",
      ],
      "hue": 98.3,
      "name": "yellow",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f4fbf0",
        "#e0f4d5",
        "#c6e9b2",
        "#a8da8a",
        "#83c05a",
        "#5ba119",
        "#478013",
        "#345f0e",
        "#284b0b",
        "#1f3909",
        "#132606",
      ],
      "hue": 134.3,
      "name": "lime",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#eefcf6",
        "#cef7e7",
        "#a3eed4",
        "#6de0bc",
        "#26c69e",
        "#1da281",
        "#168166",
        "#11604b",
        "#0e4b3b",
        "#0b3a2d",
        "#07271d",
      ],
      "hue": 170.3,
      "name": "emerald",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#edfcfe",
        "#c9f6fc",
        "#98edf8",
        "#56deee",
        "#26c1d2",
        "#1d9eac",
        "#167e89",
        "#115d66",
        "#0e4950",
        "#0b383d",
        "#072629",
      ],
      "hue": 206.3,
      "name": "cyan",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f4fafe",
        "#dff0fe",
        "#c3e3fd",
        "#9cd2fc",
        "#59b8fb",
        "#1c97e0",
        "#1578b3",
        "#105985",
        "#0d4669",
        "#0b3551",
        "#072437",
      ],
      "hue": 242.3,
      "name": "sky",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f7f8fe",
        "#ecedf8",
        "#dddfe9",
        "#cacbd6",
        "#aeafb9",
        "#8e8f99",
        "#70717b",
        "#53545c",
        "#40424a",
        "#31323a",
        "#202129",
      ],
      "hue": 278.3,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "roleHints": [
    "danger: red",
    "warning: amber",
    "success: lime",
    "info: sky",
  ],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.25:1, Lc 0",
    "3: 1.52:1, Lc 14",
    "4: 2.05:1, Lc 26",
    "5: 3.02:1, Lc 40",
    "6: 4.54:1, Lc 57",
    "7: 7.10:1, Lc 73",
    "8: 9.45:1, Lc 83",
    "9: 11.97:1, Lc 92",
    "10: 15.08:1, Lc 98",
  ],
  "warnings": [
    "SEED_HARMONIZED",
  ],
}
`;

exports[`golden palettes > fifteen steps, vivid, drifted 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 650,
        "aaLarge": 500,
        "aaa": 725,
      },
      "hexes": [
        "#fff7f6",
        "#ffeeeb",
        "#ffe1de",
        "#fed2cf",
        "#fec0bd",
        "#fea6a5",
        "#fe8186",
        "#fd5167",
        "#f1114f",
        "#c70e44",
        "#a20c3a",
        "#890b33",
        "#740a2d",
        "#5e0825",
        "#48051c",
      ],
      "hue": 17.6,
      "name": "rose",
      "seed": {
        "input": "#e11d48",
        "magnitude": "noticeable",
        "mode": "harmonize",
        "slot": 575,
      },
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 650,
        "aaLarge": 500,
        "aaa": 725,
      },
      "hexes": [
        "#fff7f1",
        "#ffefe1",
        "#ffe3cd",
        "#fed5b5",
        "#fec397",
        "#feaa6c",
        "#fe8718",
        "#df720d",
        "#c15f0a",
        "#a14d08",
        "#853c07",
        "#723206",
        "#622806",
        "#501f05",
        "#3d1503",
      ],
      "hue": 53.6,
      "name": "orange",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 650,
        "aaLarge": 500,
        "aaa": 725,
      },
      "hexes": [
        "#fcf9e9",
        "#f9f2cd",
        "#f7e8ab",
        "#f4dc81",
        "#efcd4d",
        "#e2b915",
        "#c9a211",
        "#b08b0d",
        "#98760a",
        "#7e6008",
        "#674d07",
        "#584106",
        "#4b3605",
        "#3d2b04",
        "#2e1f03",
      ],
      "hue": 89.6,
      "name": "yellow",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 650,
        "aaLarge": 500,
        "aaa": 725,
      },
      "hexes": [
        "#f2fcee",
        "#e3f8d7",
        "#d1f2bb",
        "#bfea99",
        "#acde73",
        "#97ce41",
        "#84b610",
        "#759c0d",
        "#67850a",
        "#566c08",
        "#485707",
        "#3e4906",
        "#353d05",
        "#2b3104",
        "#202403",
      ],
      "hue": 125.6,
      "name": "lime",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 650,
        "aaLarge": 500,
        "aaa": 725,
      },
      "hexes": [
        "#ebfdf6",
        "#d0fbea",
        "#b0f7db",
        "#87f1c9",
        "#52e7b3",
        "#18d79c",
        "#13bd86",
        "#0fa470",
        "#0c8c5c",
        "#0a7349",
        "#085e38",
        "#074f2d",
        "#074324",
        "#05351a",
        "#042811",
      ],
      "hue": 161.6,
      "name": "emerald",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 650,
        "aaLarge": 500,
        "aaa": 725,
      },
      "hexes": [
        "#eafcff",
        "#cef9ff",
        "#a4f5fe",
        "#6eeffa",
        "#1be5f1",
        "#18d1da",
        "#14b8be",
        "#0fa0a3",
        "#0c888a",
        "#0a7070",
        "#085b5a",
        "#074d4b",
        "#07413e",
        "#053431",
        "#042624",
      ],
      "hue": 197.6,
      "name": "teal",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 650,
        "aaLarge": 500,
        "aaa": 725,
      },
      "hexes": [
        "#f3faff",
        "#e5f3ff",
        "#d2ebff",
        "#bae2fe",
        "#9ad6fe",
        "#69c7fe",
        "#13b2f4",
        "#0f9ad1",
        "#0c83b1",
        "#0a6c90",
        "#085874",
        "#074a61",
        "#073f51",
        "#053240",
        "#042530",
      ],
      "hue": 233.6,
      "name": "sky",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 650,
        "aaLarge": 500,
        "aaa": 725,
      },
      "hexes": [
        "#f7f8ff",
        "#eef1ff",
        "#e2e7ff",
        "#d3dbfe",
        "#c1cdfe",
        "#a9bbfe",
        "#89a2fd",
        "#6888fd",
        "#496efc",
        "#2a4efb",
        "#1025f9",
        "#0331bc",
        "#04318e",
        "#04296c",
        "#031f4e",
      ],
      "hue": 269.6,
      "name": "indigo",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 650,
        "aaLarge": 500,
        "aaa": 725,
      },
      "hexes": [
        "#fcf7ff",
        "#f9eeff",
        "#f4e2ff",
        "#edd4fe",
        "#e4c2fe",
        "#d8abfe",
        "#c88dfd",
        "#b76bfd",
        "#a845fc",
        "#9312ef",
        "#7510c6",
        "#620eab",
        "#510d93",
        "#400b79",
        "#2e085e",
      ],
      "hue": 305.6,
      "name": "purple",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 650,
        "aaLarge": 500,
        "aaa": 725,
      },
      "hexes": [
        "#fff7fa",
        "#ffedf4",
        "#ffe0ee",
        "#fed0e7",
        "#febcdf",
        "#fea0d7",
        "#fe76ce",
        "#f14dc1",
        "#df17b3",
        "#b90e98",
        "#960c7f",
        "#7f0b6e",
        "#6b0a5f",
        "#56084e",
        "#41053c",
      ],
      "hue": 341.6,
      "name": "pink",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 650,
        "aaLarge": 500,
        "aaa": 725,
      },
      "hexes": [
        "#fef7f7",
        "#fbeeee",
        "#f2e5e5",
        "#e6dada",
        "#d9cccc",
        "#c7baba",
        "#b0a4a4",
        "#998d8d",
        "#837878",
        "#6d6262",
        "#594f4f",
        "#4c4242",
        "#413737",
        "#352b2b",
        "#281f1f",
      ],
      "hue": 17.6,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "roleHints": [
    "danger: rose",
    "warning: orange",
    "success: emerald",
    "info: sky",
  ],
  "stepDistanceGuarantees": [
    "1: 1.06:1, Lc 0",
    "2: 1.16:1, Lc 0",
    "3: 1.29:1, Lc 8",
    "4: 1.47:1, Lc 12",
    "5: 1.77:1, Lc 20",
    "6: 2.28:1, Lc 30",
    "7: 3.02:1, Lc 40",
    "8: 4.03:1, Lc 52",
    "9: 5.54:1, Lc 64",
    "10: 7.46:1, Lc 74",
    "11: 9.12:1, Lc 82",
    "12: 10.80:1, Lc 88",
    "13: 12.85:1, Lc 94",
    "14: 15.12:1, Lc 98",
  ],
  "warnings": [
    "SEED_HARMONIZED",
  ],
}
`;

exports[`golden palettes > five steps, muted 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 750,
        "aaLarge": 500,
        "aaa": 750,
      },
      "hexes": [
        "#f1fbf9",
        "#9fe3d7",
        "#5a9b91",
        "#2e514b",
        "#152522",
      ],
      "hue": 182.5,
      "name": "teal",
      "seed": {
        "input": "#14b8a6",
        "magnitude": "large",
        "mode": "harmonize",
        "slot": 500,
      },
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 750,
        "aaLarge": 500,
        "aaa": 750,
      },
      "hexes": [
        "#f4fafc",
        "#addeed",
        "#5a99ab",
        "#2e4f59",
        "#152428",
      ],
      "hue": 218.5,
      "name": "cyan",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 750,
        "aaLarge": 500,
        "aaa": 750,
      },
      "hexes": [
        "#f7f9fc",
        "#c7d8ee",
        "#5e92d4",
        "#2c4c73",
        "#142235",
      ],
      "hue": 254.5,
      "name": "blue",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 750,
        "aaLarge": 500,
        "aaa": 750,
      },
      "hexes": [
        "#f9f8fc",
        "#d6d3ee",
        "#9285d5",
        "#503b92",
        "#241b43",
      ],
      "hue": 290.5,
      "name": "violet",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 750,
        "aaLarge": 500,
        "aaa": 750,
      },
      "hexes": [
        "#fcf7fc",
        "#efcbef",
        "#bc78bd",
        "#6d356e",
        "#321832",
      ],
      "hue": 326.5,
      "name": "fuchsia",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 750,
        "aaLarge": 500,
        "aaa": 750,
      },
      "hexes": [
        "#fcf8f9",
        "#efced5",
        "#d2728e",
        "#783449",
        "#371821",
      ],
      "hue": 2.5,
      "name": "pink",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 750,
        "aaLarge": 500,
        "aaa": 750,
      },
      "hexes": [
        "#fcf8f7",
        "#efd0c6",
        "#d47759",
        "#703c2c",
        "#331b14",
      ],
      "hue": 38.5,
      "name": "orange",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 750,
        "aaLarge": 500,
        "aaa": 750,
      },
      "hexes": [
        "#fcf8f3",
        "#eed2ac",
        "#af8955",
        "#5b472b",
        "#292013",
      ],
      "hue": 74.5,
      "name": "amber",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 750,
        "aaLarge": 500,
        "aaa": 750,
      },
      "hexes": [
        "#f9f9f1",
        "#d7daa4",
        "#919455",
        "#4b4c2b",
        "#222313",
      ],
      "hue": 110.5,
      "name": "lime",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 750,
        "aaLarge": 500,
        "aaa": 750,
      },
      "hexes": [
        "#f4fbf4",
        "#b6e1b9",
        "#599f61",
        "#2d5331",
        "#142516",
      ],
      "hue": 146.5,
      "name": "green",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 750,
        "aaLarge": 500,
        "aaa": 750,
      },
      "hexes": [
        "#effbf9",
        "#ccd9d6",
        "#879290",
        "#424d4a",
        "#1a2322",
      ],
      "hue": 182.5,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "roleHints": [
    "danger: orange",
    "warning: amber",
    "success: green",
    "info: blue",
  ],
  "stepDistanceGuarantees": [
    "1: 1.37:1, Lc 10",
    "2: 3.02:1, Lc 40",
    "3: 8.29:1, Lc 79",
    "4: 15.06:1, Lc 99",
  ],
  "warnings": [
    "SEED_HARMONIZED",
  ],
}
`;

exports[`golden palettes > mid grey, exact 1`] = `
{
  "ramps": [
    {
      "broken": [
        "500: 2.6077 < 3",
        "600: 3.7512 < 4.5",
        "700: 6.2542 < 7",
      ],
      "firstOnWhite": {
        "aa": 700,
        "aaLarge": 600,
        "aaa": 800,
      },
      "hexes": [
        "#f9f9f9",
        "#f4f4f4",
        "#e9e9e9",
        "#d9d9d9",
        "#bebebe",
        "#9c9c9c",
        "#808080 (seed)",
        "#5d5d5d",
        "#4b4b4b",
        "#373737",
        "#222222",
      ],
      "hue": null,
      "name": "grey",
      "seed": {
        "input": "#808080",
        "magnitude": "noticeable",
        "mode": "exact",
        "slot": 600,
      },
      "sharedLadder": false,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f9f9f9",
        "#eeeeee",
        "#dfdfdf",
        "#cccccc",
        "#b0b0b0",
        "#909090",
        "#727272",
        "#545454",
        "#424242",
        "#323232",
        "#222222",
      ],
      "hue": null,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "roleHints": [],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.27:1, Lc 0",
    "3: 1.53:1, Lc 13",
    "4: 2.06:1, Lc 26",
    "5: 3.03:1, Lc 40",
    "6: 4.57:1, Lc 57",
    "7: 7.19:1, Lc 73",
    "8: 9.55:1, Lc 84",
    "9: 12.18:1, Lc 93",
    "10: 15.11:1, Lc 99",
  ],
  "warnings": [
    "GUARANTEE_NOT_MET",
    "NO_HUE",
    "SEED_WARP_STRAIN",
  ],
}
`;

exports[`golden palettes > out of gamut input 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f2fbf1",
        "#dbf5d8",
        "#bdebb9",
        "#9adc95",
        "#6fc369",
        "#3ba436",
        "#168413",
        "#10620e",
        "#0d4d0b",
        "#0b3b09",
        "#072806",
      ],
      "hue": 142.5,
      "name": "green",
      "seed": {
        "input": "#00ff00",
        "magnitude": "large",
        "mode": "harmonize",
        "slot": 200,
      },
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#edfcf8",
        "#ccf7ec",
        "#9eeedc",
        "#62e0c8",
        "#26c5ac",
        "#1da18c",
        "#16806f",
        "#115f52",
        "#0e4b40",
        "#0b3931",
        "#072621",
      ],
      "hue": 178.5,
      "name": "teal",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#eefbfe",
        "#cff4fe",
        "#a0ebfd",
        "#5cdcf8",
        "#26c0dd",
        "#1d9db5",
        "#167d90",
        "#115d6b",
        "#0e4954",
        "#0b3841",
        "#07252c",
      ],
      "hue": 214.5,
      "name": "cyan",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f5f9fe",
        "#e2effe",
        "#c9e2fd",
        "#a7d0fc",
        "#70b5fb",
        "#1c93f7",
        "#1574c5",
        "#0f5693",
        "#0d4474",
        "#0a345a",
        "#06233d",
      ],
      "hue": 250.5,
      "name": "blue",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f8f8fe",
        "#edecfe",
        "#dddcfd",
        "#c9c7fc",
        "#ada7fb",
        "#8f7ffa",
        "#7459e9",
        "#5d28d9",
        "#4b19b3",
        "#39158a",
        "#250e60",
      ],
      "hue": 286.5,
      "name": "violet",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7fe",
        "#fbe8fe",
        "#f8d3fd",
        "#f4b7fc",
        "#e294ed",
        "#c86cd5",
        "#b041bf",
        "#8f179f",
        "#71137d",
        "#571061",
        "#3b0a42",
      ],
      "hue": 322.5,
      "name": "fuchsia",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f9",
        "#fee9ef",
        "#fdd5e1",
        "#fdbacf",
        "#fc8eb4",
        "#e96095",
        "#d12c78",
        "#a2155a",
        "#801246",
        "#630f36",
        "#440a24",
      ],
      "hue": 358.5,
      "name": "pink",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f5",
        "#feeae5",
        "#fdd7cd",
        "#fdbdad",
        "#fc947b",
        "#ee6444",
        "#d13b14",
        "#9d2c0f",
        "#7c220c",
        "#601a0a",
        "#421106",
      ],
      "hue": 34.5,
      "name": "red",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef8f0",
        "#feebd6",
        "#fdd9b0",
        "#fcc179",
        "#eda032",
        "#c5811a",
        "#9d6613",
        "#754c0e",
        "#5c3b0c",
        "#472d09",
        "#301e06",
      ],
      "hue": 70.5,
      "name": "amber",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#faf9ed",
        "#f1f0cc",
        "#e4e2a2",
        "#d4d071",
        "#bbb42b",
        "#999319",
        "#797513",
        "#5a560e",
        "#47440c",
        "#363409",
        "#242306",
      ],
      "hue": 106.5,
      "name": "yellow",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f3fbf2",
        "#e8f0e7",
        "#dae1d9",
        "#c7cec6",
        "#abb2aa",
        "#8b928a",
        "#6d746c",
        "#50564f",
        "#3e443d",
        "#2e342e",
        "#1e231d",
      ],
      "hue": 142.5,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "roleHints": [
    "danger: red",
    "warning: amber",
    "success: green",
    "info: blue",
  ],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.26:1, Lc 0",
    "3: 1.52:1, Lc 13",
    "4: 2.05:1, Lc 26",
    "5: 3.01:1, Lc 40",
    "6: 4.54:1, Lc 57",
    "7: 7.08:1, Lc 73",
    "8: 9.45:1, Lc 83",
    "9: 11.99:1, Lc 92",
    "10: 15.05:1, Lc 98",
  ],
  "warnings": [
    "SEED_CLIPPED",
    "SEED_HARMONIZED",
  ],
}
`;

exports[`golden palettes > pure blue 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f6f9fe",
        "#e6eefe",
        "#d1e0fd",
        "#b5cdfc",
        "#8baffb",
        "#5a8cfa",
        "#3369ec",
        "#0b40dd",
        "#052fb5",
        "#04258c",
        "#031961",
      ],
      "hue": 264.1,
      "name": "blue",
      "seed": {
        "input": "#0000ff",
        "magnitude": "large",
        "mode": "harmonize",
        "slot": 700,
      },
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#faf8fe",
        "#f1ebfe",
        "#e5dafd",
        "#d6c3fc",
        "#c1a0fb",
        "#a777f0",
        "#8e50de",
        "#761bcb",
        "#5d17a0",
        "#47137c",
        "#300d55",
      ],
      "hue": 300.1,
      "name": "purple",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7fc",
        "#fee8f7",
        "#fdd3f2",
        "#fdb6eb",
        "#f08fda",
        "#d766c0",
        "#bf38a7",
        "#981684",
        "#781368",
        "#5d0f50",
        "#400a36",
      ],
      "hue": 336.1,
      "name": "fuchsia",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f8",
        "#fee9eb",
        "#fdd6d9",
        "#fdbbc2",
        "#fc919f",
        "#ee5f79",
        "#d72958",
        "#a51640",
        "#821332",
        "#650f26",
        "#450a19",
      ],
      "hue": 12.1,
      "name": "rose",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f4",
        "#feeae0",
        "#fdd7c5",
        "#fdbe9f",
        "#fc965f",
        "#e66d1a",
        "#b85614",
        "#893f0f",
        "#6c310c",
        "#54260a",
        "#391906",
      ],
      "hue": 48,
      "name": "orange",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef8ed",
        "#fdeccb",
        "#fadca0",
        "#f1c66d",
        "#dda822",
        "#b5891a",
        "#906c13",
        "#6b500e",
        "#543f0c",
        "#413009",
        "#2c2006",
      ],
      "hue": 84,
      "name": "yellow",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f7faee",
        "#e8f2cf",
        "#d6e6a8",
        "#c0d57b",
        "#a1ba41",
        "#839919",
        "#677a13",
        "#4c5a0e",
        "#3c470c",
        "#2d3609",
        "#1e2406",
      ],
      "hue": 120,
      "name": "lime",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f0fcf4",
        "#d4f6df",
        "#afedc5",
        "#84dfa7",
        "#48c682",
        "#1da464",
        "#16824f",
        "#10613a",
        "#0e4c2d",
        "#0b3a22",
        "#072716",
      ],
      "hue": 156.1,
      "name": "emerald",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#edfcfb",
        "#c9f7f4",
        "#99eeea",
        "#56e0db",
        "#26c3bf",
        "#1da09c",
        "#167f7c",
        "#115e5c",
        "#0e4a48",
        "#0b3937",
        "#072625",
      ],
      "hue": 192.1,
      "name": "teal",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f1fafe",
        "#d9f2fe",
        "#b6e6fd",
        "#82d7fc",
        "#26bdf2",
        "#1d9bc7",
        "#167b9e",
        "#105b76",
        "#0e485d",
        "#0b3747",
        "#072530",
      ],
      "hue": 228.1,
      "name": "sky",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f6f9fe",
        "#e9eef8",
        "#dadfe9",
        "#c7ccd6",
        "#abb0b9",
        "#8c9099",
        "#6e727b",
        "#50555c",
        "#3e424a",
        "#2f333a",
        "#1e2229",
      ],
      "hue": 264.1,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "roleHints": [
    "danger: rose",
    "warning: yellow",
    "success: emerald",
    "info: sky",
  ],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.26:1, Lc 0",
    "3: 1.52:1, Lc 14",
    "4: 2.05:1, Lc 26",
    "5: 3.02:1, Lc 40",
    "6: 4.53:1, Lc 56",
    "7: 7.12:1, Lc 73",
    "8: 9.43:1, Lc 84",
    "9: 11.95:1, Lc 92",
    "10: 15.07:1, Lc 98",
  ],
  "warnings": [
    "SEED_HARMONIZED",
  ],
}
`;

exports[`golden palettes > pure yellow 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f9faee",
        "#eff0cd",
        "#e1e3a3",
        "#cfd173",
        "#b5b630",
        "#949519",
        "#767613",
        "#57570e",
        "#44440c",
        "#343409",
        "#232306",
      ],
      "hue": 109.8,
      "name": "lime",
      "seed": {
        "input": "#ffff00",
        "magnitude": "large",
        "mode": "harmonize",
        "slot": 50,
      },
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f2fbf2",
        "#d9f5da",
        "#baecbc",
        "#95dd99",
        "#67c46f",
        "#29a53f",
        "#16842d",
        "#106220",
        "#0e4d19",
        "#0b3b13",
        "#07280b",
      ],
      "hue": 145.8,
      "name": "green",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#edfcf9",
        "#cbf7ee",
        "#9ceee0",
        "#5ee0cd",
        "#26c5b1",
        "#1da190",
        "#168072",
        "#115f55",
        "#0e4a42",
        "#0b3933",
        "#072622",
      ],
      "hue": 181.8,
      "name": "teal",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#effbfe",
        "#d2f4fe",
        "#a7e9fd",
        "#5fdbfc",
        "#26bfe1",
        "#1d9db9",
        "#167c93",
        "#105c6e",
        "#0e4856",
        "#0b3742",
        "#07252d",
      ],
      "hue": 217.8,
      "name": "cyan",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f5f9fe",
        "#e3effe",
        "#cbe1fd",
        "#aacffc",
        "#78b3fb",
        "#3291f9",
        "#1472d0",
        "#0f559b",
        "#0c427b",
        "#0a335f",
        "#062241",
      ],
      "hue": 253.8,
      "name": "blue",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f9f8fe",
        "#eeecfe",
        "#dfdcfd",
        "#ccc6fc",
        "#b1a5fb",
        "#957df8",
        "#7b57e7",
        "#6425d7",
        "#5019af",
        "#3d1587",
        "#280e5d",
      ],
      "hue": 289.8,
      "name": "violet",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef6fe",
        "#fee7fe",
        "#fdd2fd",
        "#f9b5fb",
        "#e692e8",
        "#cc6ad0",
        "#b43fba",
        "#911798",
        "#731378",
        "#59105c",
        "#3d0a3f",
      ],
      "hue": 325.8,
      "name": "fuchsia",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f9",
        "#fee9ee",
        "#fdd5df",
        "#fdbacb",
        "#fc8faf",
        "#eb5f8f",
        "#d32b71",
        "#a31654",
        "#801241",
        "#630f32",
        "#440a21",
      ],
      "hue": 1.8,
      "name": "pink",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f5",
        "#feeae4",
        "#fdd7cb",
        "#fdbdaa",
        "#fc9575",
        "#ed663b",
        "#ca4514",
        "#97320f",
        "#77280c",
        "#5c1e0a",
        "#3f1406",
      ],
      "hue": 37.8,
      "name": "orange",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef8f0",
        "#feebd4",
        "#fddaac",
        "#fcc272",
        "#eaa22d",
        "#c1831a",
        "#9a6813",
        "#734d0e",
        "#5a3c0c",
        "#452e09",
        "#2f1e06",
      ],
      "hue": 73.8,
      "name": "amber",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f9faef",
        "#eeefe4",
        "#dfe0d5",
        "#cccdc2",
        "#b0b1a7",
        "#909187",
        "#727369",
        "#54554c",
        "#42433a",
        "#33332b",
        "#22221a",
      ],
      "hue": 109.8,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "roleHints": [
    "danger: orange",
    "warning: amber",
    "success: green",
    "info: blue",
  ],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.25:1, Lc 0",
    "3: 1.52:1, Lc 13",
    "4: 2.05:1, Lc 26",
    "5: 3.02:1, Lc 40",
    "6: 4.54:1, Lc 57",
    "7: 7.10:1, Lc 73",
    "8: 9.47:1, Lc 83",
    "9: 11.99:1, Lc 92",
    "10: 15.07:1, Lc 98",
  ],
  "warnings": [
    "SEED_AT_RAMP_END",
    "SEED_HARMONIZED",
  ],
}
`;

exports[`golden palettes > sixteen families 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f6f9fe",
        "#e5effe",
        "#cee0fd",
        "#b1cefc",
        "#83b1fb",
        "#4c8efa",
        "#196beb",
        "#0d4fb3",
        "#0b3e8d",
        "#09306d",
        "#05204b",
      ],
      "hue": 259.8,
      "name": "blue",
      "seed": {
        "input": "#3b82f6",
        "magnitude": "noticeable",
        "mode": "harmonize",
        "slot": 500,
      },
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f8f8fe",
        "#ebedfe",
        "#dbddfd",
        "#c5c8fc",
        "#a7a8fb",
        "#8681fa",
        "#6b5ceb",
        "#542ddc",
        "#431ab9",
        "#33168f",
        "#210f63",
      ],
      "hue": 282.3,
      "name": "indigo",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#faf8fe",
        "#f3ebfe",
        "#e8d9fd",
        "#dbc1fc",
        "#c99cfb",
        "#af74ec",
        "#964dd9",
        "#7d1ac2",
        "#621699",
        "#4b1276",
        "#330c51",
      ],
      "hue": 304.8,
      "name": "purple",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef6fe",
        "#fee7fd",
        "#fdd1fc",
        "#fab5f9",
        "#e792e6",
        "#ce69ce",
        "#b63eb7",
        "#931695",
        "#741376",
        "#59105b",
        "#3d0a3e",
      ],
      "hue": 327.3,
      "name": "fuchsia",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7fa",
        "#fee8f1",
        "#fdd4e6",
        "#fdb9d8",
        "#fb8cc4",
        "#e361a7",
        "#cc308b",
        "#9f156a",
        "#7d1253",
        "#610f40",
        "#430a2b",
      ],
      "hue": 349.8,
      "name": "pink",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f8",
        "#fee9eb",
        "#fdd6d9",
        "#fdbbc2",
        "#fc919f",
        "#ee5f79",
        "#d72958",
        "#a5163f",
        "#821331",
        "#650f25",
        "#450a18",
      ],
      "hue": 12.3,
      "name": "rose",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f5",
        "#feeae4",
        "#fdd7cd",
        "#fdbdad",
        "#fc947b",
        "#ee6443",
        "#d03c14",
        "#9c2c0f",
        "#7b230c",
        "#5f1b0a",
        "#411106",
      ],
      "hue": 34.8,
      "name": "red",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f3",
        "#feeadd",
        "#fdd8be",
        "#fcbf93",
        "#f99949",
        "#d7771a",
        "#ab5e14",
        "#80450e",
        "#65360c",
        "#4e2909",
        "#351b06",
      ],
      "hue": 57.3,
      "name": "orange",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef8ee",
        "#feeccf",
        "#fddaa1",
        "#f6c46f",
        "#e2a525",
        "#ba871a",
        "#946b13",
        "#6e4f0e",
        "#573e0c",
        "#432f09",
        "#2d1f06",
      ],
      "hue": 79.8,
      "name": "yellow",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#faf9ed",
        "#f3efcc",
        "#e9e1a1",
        "#dace6f",
        "#c2b225",
        "#9f9119",
        "#7e7313",
        "#5e550e",
        "#49430c",
        "#383309",
        "#262206",
      ],
      "hue": 102.3,
      "name": "amber",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f6faef",
        "#e5f3d1",
        "#d1e7ab",
        "#b8d780",
        "#98bc49",
        "#789c19",
        "#5f7c13",
        "#465c0e",
        "#37480b",
        "#293709",
        "#1b2506",
      ],
      "hue": 124.8,
      "name": "lime",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f1fbf2",
        "#d8f5db",
        "#b8ecbd",
        "#92dd9b",
        "#63c472",
        "#1da643",
        "#168334",
        "#106226",
        "#0e4d1d",
        "#0b3b16",
        "#07280e",
      ],
      "hue": 147.3,
      "name": "green",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#eefcf6",
        "#cef7e7",
        "#a4eed3",
        "#6ee0bb",
        "#26c69d",
        "#1da280",
        "#168165",
        "#11604b",
        "#0e4b3a",
        "#0b3a2c",
        "#07271d",
      ],
      "hue": 169.8,
      "name": "emerald",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#edfcfb",
        "#c9f7f4",
        "#99eeea",
        "#56e0dc",
        "#26c3bf",
        "#1da09d",
        "#167f7c",
        "#115e5c",
        "#0e4a48",
        "#0b3937",
        "#072625",
      ],
      "hue": 192.3,
      "name": "teal",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#eefbfe",
        "#cff4fe",
        "#a0ebfd",
        "#5cdcf8",
        "#26c0dd",
        "#1d9db6",
        "#167d90",
        "#115d6b",
        "#0e4954",
        "#0b3841",
        "#07252c",
      ],
      "hue": 214.8,
      "name": "cyan",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f3fafe",
        "#ddf1fe",
        "#bfe4fd",
        "#95d4fc",
        "#44bafb",
        "#1c99d6",
        "#1679aa",
        "#105a7f",
        "#0d4664",
        "#0b364d",
        "#072434",
      ],
      "hue": 237.3,
      "name": "sky",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f6f9fe",
        "#e8eef8",
        "#dadfe9",
        "#c7ccd5",
        "#abb0b9",
        "#8b9099",
        "#6d727a",
        "#50555c",
        "#3e424a",
        "#2e333a",
        "#1e2228",
      ],
      "hue": 259.8,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "roleHints": [
    "danger: red",
    "warning: yellow",
    "success: green",
    "info: sky",
  ],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.26:1, Lc 0",
    "3: 1.52:1, Lc 14",
    "4: 2.05:1, Lc 26",
    "5: 3.01:1, Lc 40",
    "6: 4.53:1, Lc 56",
    "7: 7.09:1, Lc 73",
    "8: 9.45:1, Lc 83",
    "9: 11.99:1, Lc 92",
    "10: 15.03:1, Lc 98",
  ],
  "warnings": [
    "LIGHT_SHADES_MERGED",
    "SEED_HARMONIZED",
  ],
}
`;

exports[`golden palettes > three families only 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#edfcf9",
        "#cbf7ee",
        "#9ceee0",
        "#5ee0ce",
        "#26c4b2",
        "#1da191",
        "#168073",
        "#115f55",
        "#0e4a43",
        "#0b3933",
        "#072622",
      ],
      "hue": 182.5,
      "name": "teal",
      "seed": {
        "input": "#14b8a6",
        "magnitude": "noticeable",
        "mode": "harmonize",
        "slot": 400,
      },
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#faf8fe",
        "#f2ebfe",
        "#e7d9fd",
        "#d9c2fc",
        "#c59efb",
        "#ab76ee",
        "#924edb",
        "#7a1ac6",
        "#5f169c",
        "#491279",
        "#310c53",
      ],
      "hue": 302.5,
      "name": "purple",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef8f2",
        "#feebda",
        "#fdd8b9",
        "#fcc08a",
        "#f59b40",
        "#d07c1a",
        "#a56214",
        "#7b480e",
        "#61380c",
        "#4b2b09",
        "#331c06",
      ],
      "hue": 62.5,
      "name": "amber",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#effbf9",
        "#e4f1ee",
        "#d5e2df",
        "#c2cfcc",
        "#a6b2b0",
        "#879290",
        "#697472",
        "#4c5754",
        "#3a4442",
        "#2b3533",
        "#1a2322",
      ],
      "hue": 182.5,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "roleHints": [
    "danger: amber",
    "warning: amber",
    "success: teal",
    "info: teal",
  ],
  "stepDistanceGuarantees": [
    "1: 1.09:1, Lc 0",
    "2: 1.26:1, Lc 0",
    "3: 1.52:1, Lc 14",
    "4: 2.06:1, Lc 26",
    "5: 3.03:1, Lc 40",
    "6: 4.55:1, Lc 57",
    "7: 7.09:1, Lc 73",
    "8: 9.51:1, Lc 84",
    "9: 11.95:1, Lc 92",
    "10: 15.17:1, Lc 99",
  ],
  "warnings": [
    "SEED_HARMONIZED",
  ],
}
`;

exports[`golden palettes > two seeds 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f7f8fe",
        "#eaedfe",
        "#d9defd",
        "#c2c9fc",
        "#a1aafb",
        "#7e84fa",
        "#615fec",
        "#4a31dd",
        "#3b1bbe",
        "#2d1793",
        "#1d1065",
      ],
      "hue": 278.3,
      "name": "indigo",
      "seed": {
        "input": "#635bff",
        "magnitude": "noticeable",
        "mode": "harmonize",
        "slot": 600,
      },
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fcf7fe",
        "#f8e9fe",
        "#f2d6fd",
        "#eabbfc",
        "#da96f4",
        "#c06fde",
        "#a745c9",
        "#8918ab",
        "#6c1487",
        "#531168",
        "#390b48",
      ],
      "hue": 316.2,
      "name": "fuchsia",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f9",
        "#fee8f0",
        "#fdd4e3",
        "#fdb9d3",
        "#fc8dbc",
        "#e6609e",
        "#cf2e82",
        "#a01562",
        "#7f124d",
        "#620f3b",
        "#430a27",
      ],
      "hue": 354.2,
      "name": "pink",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef7f6",
        "#feeae5",
        "#fdd7ce",
        "#fdbdb0",
        "#fc947f",
        "#ef634a",
        "#d73214",
        "#a1250f",
        "#7f1d0c",
        "#63170a",
        "#440f06",
      ],
      "hue": 32.1,
      "name": "red",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#fef8f0",
        "#feebd6",
        "#fdd9b1",
        "#fcc17b",
        "#ee9f33",
        "#c6811a",
        "#9e6613",
        "#754b0e",
        "#5c3b0c",
        "#472d09",
        "#301e06",
      ],
      "hue": 70.1,
      "name": "amber",
      "seed": {
        "input": "#f59e0b",
        "magnitude": "subtle",
        "mode": "harmonize",
        "slot": 400,
      },
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#faf9ed",
        "#f2f0cc",
        "#e6e2a2",
        "#d7cf70",
        "#beb328",
        "#9c9219",
        "#7b7413",
        "#5b560e",
        "#48430c",
        "#373409",
        "#252206",
      ],
      "hue": 104.8,
      "name": "yellow",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f3fbf1",
        "#ddf5d7",
        "#c1eab6",
        "#a0db91",
        "#77c264",
        "#47a32c",
        "#308313",
        "#23610e",
        "#1b4c0b",
        "#153a09",
        "#0d2706",
      ],
      "hue": 139.5,
      "name": "lime",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#eefcf7",
        "#cdf7ea",
        "#a1eed8",
        "#68e0c2",
        "#26c6a5",
        "#1da286",
        "#16806a",
        "#115f4f",
        "#0e4b3e",
        "#0b392f",
        "#07271f",
      ],
      "hue": 174.2,
      "name": "teal",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#edfcfe",
        "#c9f6fd",
        "#99ecfa",
        "#57ddf1",
        "#26c1d5",
        "#1d9eaf",
        "#167d8b",
        "#115d67",
        "#0e4951",
        "#0b383e",
        "#07252a",
      ],
      "hue": 208.9,
      "name": "cyan",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f4f9fe",
        "#e0f0fe",
        "#c4e3fd",
        "#9ed2fc",
        "#5db7fb",
        "#1c97e3",
        "#1577b5",
        "#105987",
        "#0d456b",
        "#0b3552",
        "#072438",
      ],
      "hue": 243.6,
      "name": "sky",
      "seed": undefined,
      "sharedLadder": true,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f7f8fe",
        "#ecedf8",
        "#dddfe9",
        "#cacbd6",
        "#aeafb9",
        "#8e8f99",
        "#70717b",
        "#53545c",
        "#40424a",
        "#31323a",
        "#202129",
      ],
      "hue": 278.3,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "roleHints": [
    "danger: red",
    "warning: amber",
    "success: lime",
    "info: sky",
  ],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.25:1, Lc 0",
    "3: 1.52:1, Lc 13",
    "4: 2.05:1, Lc 26",
    "5: 3.01:1, Lc 40",
    "6: 4.54:1, Lc 57",
    "7: 7.08:1, Lc 73",
    "8: 9.45:1, Lc 83",
    "9: 11.97:1, Lc 92",
    "10: 15.04:1, Lc 98",
  ],
  "warnings": [
    "SEED_HARMONIZED",
  ],
}
`;

exports[`golden palettes > white, exact 1`] = `
{
  "ramps": [
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#ffffff (seed)",
        "#f3f3f3",
        "#e4e4e4",
        "#d0d0d0",
        "#b3b3b3",
        "#939393",
        "#747474",
        "#565656",
        "#434343",
        "#333333",
        "#222222",
      ],
      "hue": null,
      "name": "grey",
      "seed": {
        "input": "#ffffff",
        "magnitude": "subtle",
        "mode": "exact",
        "slot": 50,
      },
      "sharedLadder": false,
    },
    {
      "broken": [],
      "firstOnWhite": {
        "aa": 600,
        "aaLarge": 500,
        "aaa": 700,
      },
      "hexes": [
        "#f9f9f9",
        "#eeeeee",
        "#dfdfdf",
        "#cccccc",
        "#b0b0b0",
        "#909090",
        "#727272",
        "#545454",
        "#424242",
        "#323232",
        "#222222",
      ],
      "hue": null,
      "name": "neutral",
      "seed": undefined,
      "sharedLadder": true,
    },
  ],
  "roleHints": [],
  "stepDistanceGuarantees": [
    "1: 1.10:1, Lc 0",
    "2: 1.27:1, Lc 0",
    "3: 1.53:1, Lc 13",
    "4: 2.06:1, Lc 26",
    "5: 3.03:1, Lc 40",
    "6: 4.57:1, Lc 57",
    "7: 7.19:1, Lc 73",
    "8: 9.55:1, Lc 84",
    "9: 12.18:1, Lc 93",
    "10: 15.11:1, Lc 99",
  ],
  "warnings": [
    "NO_HUE",
    "SEED_AT_RAMP_END",
    "SEED_WARP_STRAIN",
  ],
}
`;
